fix: touch-action on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,7 @@
 
 
 :root {
+  touch-action: manipulation;
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
